--- a/.github/workflows/build_v2.yml
+++ b/.github/workflows/build_v2.yml
@@ -34,13 +34,11 @@ jobs:
       - name: Electron - Build app
         run: pnpm dist-mac
 
-      - name: Release
-        uses: softprops/action-gh-release@v1
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
         with:
-          files: './apps/electron/dist/ontime-macOS.dmg'
-          tag_name: develop
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: ontime-mac
+          path: './apps/electron/dist/ontime-macOS.dmg'
 
   build_windows:
     runs-on: windows-latest
@@ -68,12 +66,11 @@ jobs:
       - name: Electron - Build app
         run: pnpm dist-win
 
-      - name: Release
-        uses: softprops/action-gh-release@v1
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
         with:
-          files: './apps/electron/dist/ontime-win64.exe'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: ontime-win
+          path: './apps/electron/dist/ontime-win64.exe'
 
   build_ubuntu:
     runs-on: ubuntu-latest
@@ -101,9 +98,8 @@ jobs:
       - name: Electron - Build app
         run: pnpm dist-linux
 
-      - name: Release
-        uses: softprops/action-gh-release@v1
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
         with:
-          files: './apps/electron/dist/ontime-linux.AppImage'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: ontime-linux
+          path: './apps/electron/dist/ontime-linux.AppImage'
